Use of axeDevTools, in public/css/ folder and the styles.css file: lines 39,45: updated the value of the :root--first-color and :root--text-color-light selectors for a contrast ratio of 4.5:1 then in templates/FrontOffice/ folder, for the fix of the issue: files for the links must have discernible text, updated the home.html.php and layout.html.php files, lines 6,7 in the home.html.php file and lines 56,57 in the layout.html.php file then for the fix of the issue: heading levels should only increase by one, updated the home.html.php file, lines 31,79.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -36,13 +36,13 @@
     /* Change favorite color */
     --hue-color: 224; /* Purple 250 - Green 142 - Blue 230 - Pink 340 */
     /* HSL color mode */
-    --first-color: hsl(var(--hue-color), 81%, 59%);
+    --first-color: hsl(var(--hue-color), 81%, 58%);
     --first-color-second: hsl(var(--hue-color), 56%, 12%);
     --first-color-alt: hsl(var(--hue-color), 57%, 53%);
     --first-color-lighter: hsl(var(--hue-color), 92%, 85%);
     --title-color: hsl(var(--hue-color), 8%, 12%);
     --text-color: hsl(var(--hue-color), 8%, 45%);
-    --text-color-light: hsl(var(--hue-color), 8%, 65%);
+    --text-color-light: hsl(var(--hue-color), 22%, 50%);
     --input-color: hsl(var(--hue-color), 70%, 96%);
     --body-color: hsl(var(--hue-color), 60%, 99%);
     --container-color: #FFF;
